--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -2,7 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav">
+    android:id="@+id/nav"
+    app:startDestination="@id/firstFragment">
     <fragment
         android:id="@+id/firstFragment"
         android:name="com.example.m3_hw_8.FirstFragment"
